--- a/profile.html
+++ b/profile.html
@@ -1,22 +1,26 @@
+<!-- Rawan Saab: 213693625, Lareen Kadour:213992431 , George Hanna: 324090968-->
 <!DOCTYPE html>
 <html lang = "en">
 
 <head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Mickey the Debug Dog</title>
+	<link rel="stylesheet" href="profile.css" />
 </head>
 
 <body>
-	<div>
+	<div class="page">
 		<!-- Banner start -->
-		<div>
-			<div>
-				<img src="profile.png" />
+		<div class="banner">
+			<div class="profile-img-wrapper">
+				<img class="profile-img" src="profile.png" alt="Mickey profile" />
 			</div>
 		</div>
 		<!-- Banner end -->
-		<h1> Mickey the Debug Dog </h1>
-		<div>
-			<div>
+		<h1 class="main-title"> Mickey the Debug Dog </h1>
+		<div class="section info">
+			<div class="col">
 				<p>
 					Many a programmer have heard of
 					<a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubber Duck Debugging</a>.
@@ -27,7 +31,7 @@
 						good at helping to debug those tough problems in your code.
 				</p>
 				<div>
-					<p>
+					<p class="sub-title">
 						Real Name
 					</p>
 					<p>
@@ -43,7 +47,7 @@
 					</p>
 				</div>
 				<div>
-					<p>
+					<p class="sub-title">
 						Powers
 					</p>
 					<p>
@@ -53,7 +57,7 @@
 					</p>
 				</div>
 				<div>
-					<p>
+					<p class="sub-title">
 						Stats
 					</p>
 					<p>
@@ -64,10 +68,10 @@
 					</p>
 				</div>
 				<div>
-					<p>
+					<p class="sub-title">
 						Siblings
 					</p>
-					<ul>
+					<ul class="siblings">
 						<li>Francesca (Dark Purple)</li>
 						<li>Bartholomew (Light Green)</li>
 						<li>Marcello (Blue)</li>
@@ -77,13 +81,15 @@
 				</div>
 			</div>
 			<div>
-				<img src="profile1.png" />
+				<img class="side-img" src="profile1.png" alt="Mickey side" />
 			</div>
 		</div>
 		<div>
-			<div>
-				<h2> Endorsement</h2>
-				<div>
+			<div class="section endorsements">
+				<div class="endorse-layout">
+					<div class="col">
+				<h2 class="section-title"> Endorsement</h2>
+				<div class="endorsement-card">
 					<p>
 						I remember the first time I met Mickey the Debug Dog.
 						Mickey looked so fierce as they stared at the code with me. I slowly explained
@@ -92,56 +98,56 @@
 						saved me hours of anguish.
 					</p>
 					<hr />
-					<span >Sofia H, AP CS student.</span>
+					<span class="endorser">Sofia H, AP CS student.</span>
 				</div>
-				<div>
+				<div class="endorsement-card">
 					<p>
 						Mickey KNOWS THE WAE Mickey 
 					</p>
 					<hr />
-					<span>Manesh J, Software Engineer, Imaginarium.</span>
+					<span class="endorser">Manesh J, Software Engineer, Imaginarium.</span>
 				</div>
-				<div>
+				<div class="endorsement-card">
 					<p>
 						Mickey has been an amazing help to me, someone who listens to every problem and is never judgemental.
 					</p>
 					<hr />
-					<span>Chris L, Programming Club Participant.</span>
+					<span class="endorser">Chris L, Programming Club Participant.</span>
 				</div>
-				<div>
+				<div class="endorsement-card">
 					<p>
-						AMickey your own endorsement here!
+						I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution reveals itself alomst instantly. Years on this desk have shown me one truth. This is not ordinary debugging. 
 					</p>
 					<hr />
-					<span>With your name here</span>
+					<span class="endorser">Rawan, Lareen and Geroge</span>
 				</div>
-				<div>
+				<div class="endorsement-card">
 					<p>
 						AMickey your friend's endorsement here!
 					</p>
 					<hr />
-					<span>With your friend's name here</span>
+					<span class="endorser">With your friend's name here</span>
 				</div>
 			</div>
-			<div>
-				<img src="profile2.png" />
+			<div class="col img-col">
+				<img class="side-img" src="profile2.png" alt="Mickey another"/>
 			</div>
 		</div>
-		<div>
-			<h2> Meet the whole debugging squad </h2>
-			<div>
-					<img src="friend1.png" />
-					<img src="friend2.png" />
-					<img src="friend3.png" />
-					<img src="friend4.png" />
-					<img src="friend5.png" />
-					<img src="friend6.png" />
-					<img src="friend7.png" />
-					<img src="friend8.png" />
+		<div class="section">
+			<h2 class="section-title"> Meet the whole debugging squad </h2>
+			<div class="friends-row">
+					<img class="friend-img" src="friend1.png" />
+					<img class="friend-img" src="friend2.png" />
+					<img class="friend-img" src="friend3.png" />
+					<img class="friend-img" src="friend4.png" />
+					<img class="friend-img" src="friend5.png" />
+					<img class="friend-img" src="friend6.png" />
+					<img class="friend-img" src="friend7.png" />
+					<img class="friend-img" src="friend8.png" />
 			</div>
 		</div>
-		Zefat Academic College
-		<div>
+		<div class="footer">
+			Zefat Academic College
 		</div>
 	</div>
 </body>
