--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,10 @@
 <html lang = "en">
 
 <head>
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Mickey the Debug Dog</title>
+	<link rel="stylesheet" href="profile.css" />
 </head>
 
 <body>
