--- a/profile.html
+++ b/profile.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-	<div>
+	<div class="page">
 		<!-- Banner start -->
-		<div>
-			<div>
-				<img src="profile.png" />
+		<div class="banner">
+			<div class="profile-img-wrapper">
+				<img class="profile-img" src="profile.png" alt="Mickey profile"/>
 			</div>
 		</div>
 		<!-- Banner end -->
