--- a/profile.html
+++ b/profile.html
@@ -18,7 +18,7 @@
 			</div>
 		</div>
 		<!-- Banner end -->
-		<h1> Mickey the Debug Dog </h1>
+		<h1 class="main-title"> Mickey the Debug Dog </h1>
 		<div>
 			<div>
 				<p>
