--- a/profile.html
+++ b/profile.html
@@ -19,8 +19,8 @@
 		</div>
 		<!-- Banner end -->
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
-		<div>
-			<div>
+		<div class="section">
+			<div class="col">
 				<p>
 					Many a programmer have heard of
 					<a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubber Duck Debugging</a>.
