--- a/profile.html
+++ b/profile.html
@@ -114,10 +114,10 @@
 				</div>
 				<div>
 					<p>
-						AMickey your own endorsement here!
+						I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution reveals itself alomst instantly. Years on this desk have shown me one truth. This is not ordinary debugging. 
 					</p>
 					<hr />
-					<span>With your name here</span>
+					<span>Rawan, Lareen and George</span>
 				</div>
 				<div>
 					<p>
