--- a/profile.html
+++ b/profile.html
@@ -31,7 +31,7 @@
 						good at helping to debug those tough problems in your code.
 				</p>
 				<div>
-					<p>
+					<p class="sub-title">
 						Real Name
 					</p>
 					<p>
@@ -47,7 +47,7 @@
 					</p>
 				</div>
 				<div>
-					<p>
+					<p class="sub-title">
 						Powers
 					</p>
 					<p>
@@ -57,7 +57,7 @@
 					</p>
 				</div>
 				<div>
-					<p>
+					<p class="sub-title">
 						Stats
 					</p>
 					<p>
@@ -68,10 +68,10 @@
 					</p>
 				</div>
 				<div>
-					<p>
+					<p class="sub-title">
 						Siblings
 					</p>
-					<ul>
+					<ul class="siblings">
 						<li>Francesca (Dark Purple)</li>
 						<li>Bartholomew (Light Green)</li>
 						<li>Marcello (Blue)</li>
@@ -81,7 +81,7 @@
 				</div>
 			</div>
 			<div>
-				<img src="profile1.png" />
+				<img class="side-img" src="profile1.png" alt="Mickey side" />
 			</div>
 		</div>
 		<div>
