--- a/profile.html
+++ b/profile.html
@@ -86,8 +86,11 @@
 		</div>
 		<div>
 			<div>
-				<h2> Endorsement</h2>
-				<div>
+                <div class="section endorsements">
+                    <div class="endorse-layout">
+                        <div class="col">
+				<h2 class="section-title"> Endorsement</h2>
+				<div class="endorsement-card">
 					<p>
 						I remember the first time I met Mickey the Debug Dog.
 						Mickey looked so fierce as they stared at the code with me. I slowly explained
@@ -96,42 +99,42 @@
 						saved me hours of anguish.
 					</p>
 					<hr />
-					<span >Sofia H, AP CS student.</span>
+					<span class="endorser">Sofia H, AP CS student.</span>
 				</div>
-				<div>
+				<div class="endorsement-card">
 					<p>
 						Mickey KNOWS THE WAE Mickey 
 					</p>
 					<hr />
-					<span>Manesh J, Software Engineer, Imaginarium.</span>
+					<span class="endorser">Manesh J, Software Engineer, Imaginarium.</span>
 				</div>
-				<div>
+				<div class="endorsement-card">
 					<p>
 						Mickey has been an amazing help to me, someone who listens to every problem and is never judgemental.
 					</p>
 					<hr />
-					<span>Chris L, Programming Club Participant.</span>
+					<span class="endorser">Chris L, Programming Club Participant.</span>
 				</div>
-				<div>
+				<div class="endorsement-card">
 					<p>
 						I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution reveals itself alomst instantly. Years on this desk have shown me one truth. This is not ordinary debugging. 
 					</p>
 					<hr />
-					<span>Rawan, Lareen and George</span>
-				</div>
+					<span class="endorser">Rawan, Lareen and George</span>
+				</div class="endorsement-card">
 				<div>
 					<p>
 						AMickey your friend's endorsement here!
 					</p>
 					<hr />
-					<span>With your friend's name here</span>
+					<span class="endorser">With your friend's name here</span>
 				</div>
 			</div>
-			<div>
-				<img src="profile2.png" />
+			<div class="col img-col">
+				<img class="side-img" src="profile2.png" alt="Mickey another"/>
 			</div>
 		</div>
-		<div>
+		<div class="section-title">
 			<h2> Meet the whole debugging squad </h2>
 			<div>
 					<img src="friend1.png" />
