--- a/profile.html
+++ b/profile.html
@@ -135,18 +135,18 @@
 			</div>
 		</div>
 		<div class="section-title">
-			<h2> Meet the whole debugging squad </h2>
-			<div>
-					<img src="friend1.png" />
-					<img src="friend2.png" />
-					<img src="friend3.png" />
-					<img src="friend4.png" />
-					<img src="friend5.png" />
-					<img src="friend6.png" />
-					<img src="friend7.png" />
-					<img src="friend8.png" />
+			<h2 class="section-title"> Meet the whole debugging squad </h2>
+			<div class="friends-row">
+					<img class="friend-img" src="friend1.png" />
+					<img class="friend-img" src="friend2.png" />
+					<img class="friend-img" src="friend3.png" />
+					<img class="friend-img" src="friend4.png" />
+					<img class="friend-img" src="friend5.png" />
+					<img class="friend-img" src="friend6.png" />
+					<img class="friend-img" src="friend7.png" />
+					<img class="friend-img" src="friend8.png" />
 			</div>
-		</div>
+		</div class="footer">
 		Zefat Academic College
 		<div>
 		</div>
