--- a/profile.html
+++ b/profile.html
@@ -19,7 +19,7 @@
 		</div>
 		<!-- Banner end -->
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
-		<div class="section-info">
+		<div class="section info">
 			<div class="col">
 				<p>
 					Many a programmer have heard of
