--- a/profile.html
+++ b/profile.html
@@ -88,8 +88,8 @@
 			<div>
                 <div class="section endorsements">
                     <div class="endorse-layout">
-                        <div class="col">
-				<h2 class="section-title"> Endorsement</h2>
+                    <div class="col">
+				    <h2 class="section-title"> Endorsement</h2>
 				<div class="endorsement-card">
 					<p>
 						I remember the first time I met Mickey the Debug Dog.
@@ -121,8 +121,8 @@
 					</p>
 					<hr />
 					<span class="endorser">Rawan, Lareen and George</span>
-				</div class="endorsement-card">
-				<div>
+				</div>
+				<div class="endorsement-card">
 					<p>
 						AMickey your friend's endorsement here!
 					</p>
@@ -134,7 +134,8 @@
 				<img class="side-img" src="profile2.png" alt="Mickey another"/>
 			</div>
 		</div>
-		<div class="section-title">
+        </div>
+		<div class="section">
 			<h2 class="section-title"> Meet the whole debugging squad </h2>
 			<div class="friends-row">
 					<img class="friend-img" src="friend1.png" />
@@ -146,9 +147,9 @@
 					<img class="friend-img" src="friend7.png" />
 					<img class="friend-img" src="friend8.png" />
 			</div>
-		</div class="footer">
-		Zefat Academic College
-		<div>
+		</div>
+		<div class="footer">
+            Zefat Academic College
 		</div>
 	</div>
 </body>
