--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,7 @@
-<!-- Rawan Saab: 213693625, Lareen Kadour:213992431 , George Hanna: 324090968-->
+<!-- 
+Names: Rawan Saab: 213693625, Lareen Kadour:213992431 , George Hanna: 324090968
+Github URL: https://github.com/rawansaab/ex1
+-->
 <!DOCTYPE html>
 <html lang = "en">
 
