--- a/profile.html
+++ b/profile.html
@@ -45,7 +45,7 @@ Github URL: https://github.com/rawansaab/ex1
 					</p>
 				</div>
 				<div>
-					<p>
+					<p class="sub-title">
 						Birthdate/"Gotcha Day"
 					</p>
 					<p>
