--- a/profile.html
+++ b/profile.html
@@ -16,9 +16,9 @@ Github URL: https://github.com/rawansaab/ex1
 </head>
 
 <body>
-	<div class="page">
+	<div class="main-container">
 		<!-- Banner start -->
-		<div class="banner">
+		<div id="banner-container">
 			<div class="profile-img-wrapper">
 				<img class="profile-img" src="profile.png" alt="Mickey profile"/>
 			</div>
