--- a/profile.html
+++ b/profile.html
@@ -25,8 +25,9 @@ Github URL: https://github.com/rawansaab/ex1
 		</div>
 		<!-- Banner end -->
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
-		<div class="section info">
-			<div class="col">
+
+		<section class="content-block info-section">
+		<div class="text-column">
 				<p>
 					Many a programmer have heard of
 					<a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubber Duck Debugging</a>.
@@ -86,7 +87,7 @@ Github URL: https://github.com/rawansaab/ex1
 					</ul>
 				</div>
 			</div>
-			<div>
+			<div class="img-column">
 				<img class="side-img" src="profile1.png" alt="Mickey side" />
 			</div>
 		</div>
