--- a/profile.html
+++ b/profile.html
@@ -37,36 +37,42 @@ Github URL: https://github.com/rawansaab/ex1
 						<a href= "https://en.wikipedia.org/wiki/Dog">Dogs</a> are known in many cultures as men and women's best friends. Most cultures rate these mythical creatures as above average intelligence, making them especially
 						good at helping to debug those tough problems in your code.
 				</p>
-				<div>
-					<p class="sub-title">
+				<div class="info-row">
+					<p class="info-label">
 						Real Name
 					</p>
 					<p>
 						GOSIG GOLDEN by <a href="https://www.ikea.com/">Ikea</a>
 					</p>
 				</div>
-				<div>
-					<p class="sub-title">
+				<div class="info-row">
+					<p class="info-label">
 						Birthdate/"Gotcha Day"
 					</p>
+				</div>
+				<div class="info-value">
 					<p>
 						Born &copy; 2001 in China, but found at a rummage sale in Seattle, WA in March of 2012.
 					</p>
 				</div>
-				<div>
-					<p class="sub-title">
+				<div class="info-row">
+					<p class="info-label">
 						Powers
 					</p>
+				</div>
+				<div class="info-value">
 					<p>
 						As Douglas Adams once said “One is never alone with a rubber duck.” Mickey, the Debug Dog is a
 						patient listener, able to help you solve your debugging woes. Unlike a rubber duck, Mickey is also soft and cuMickeyly, doubling
 						as a pillow for those occasional times you need to just close your eyes for a 5 minute power nap.
 					</p>
 				</div>
-				<div>
-					<p class="sub-title">
+				<div class="info-row">
+					<p class="info-label">
 						Stats
 					</p>
+				</div>
+				<div class="info-value">
 					<p>
 						<strong>Real name:</strong>GOSIG GOLDEN<br>
 						<strong>Prefered pronouns:</strong>They/Them<br>
@@ -74,10 +80,12 @@ Github URL: https://github.com/rawansaab/ex1
 						<strong>Weight:</strong>2 lbs<br>
 					</p>
 				</div>
-				<div>
-					<p class="sub-title">
+				<div class="info-row">
+					<p class="info-label">
 						Siblings
 					</p>
+				</div>
+				<div class="info-value">
 					<ul class="siblings">
 						<li>Francesca (Dark Purple)</li>
 						<li>Bartholomew (Light Green)</li>
