--- a/profile.html
+++ b/profile.html
@@ -23,6 +23,7 @@ Github URL: https://github.com/rawansaab/ex1
 				<img class="profile-img" src="profile.png" alt="Mickey profile"/>
 			</div>
 		</div>
+	</div>
 		<!-- Banner end -->
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
 
@@ -38,15 +39,20 @@ Github URL: https://github.com/rawansaab/ex1
 						good at helping to debug those tough problems in your code.
 				</p>
 				<div class="info-row">
-					<p class="info-label">
+					<div class="info-label">
+					<p>
 						Real Name
 					</p>
+				</div>
+				<div class="info-value">
 					<p>
 						GOSIG GOLDEN by <a href="https://www.ikea.com/">Ikea</a>
 					</p>
 				</div>
+				</div>
 				<div class="info-row">
-					<p class="info-label">
+					<div class="info-label">
+					<p>
 						Birthdate/"Gotcha Day"
 					</p>
 				</div>
@@ -55,8 +61,10 @@ Github URL: https://github.com/rawansaab/ex1
 						Born &copy; 2001 in China, but found at a rummage sale in Seattle, WA in March of 2012.
 					</p>
 				</div>
+				</div>
 				<div class="info-row">
-					<p class="info-label">
+					<div class="info-label">
+					<p>
 						Powers
 					</p>
 				</div>
@@ -67,8 +75,10 @@ Github URL: https://github.com/rawansaab/ex1
 						as a pillow for those occasional times you need to just close your eyes for a 5 minute power nap.
 					</p>
 				</div>
+		        </div>
 				<div class="info-row">
-					<p class="info-label">
+					<div class="info-label">
+					<p>
 						Stats
 					</p>
 				</div>
@@ -80,13 +90,15 @@ Github URL: https://github.com/rawansaab/ex1
 						<strong>Weight:</strong>2 lbs<br>
 					</p>
 				</div>
+			</div>
 				<div class="info-row">
-					<p class="info-label">
+					<div class="info-label">
+					<p>
 						Siblings
 					</p>
 				</div>
 				<div class="info-value">
-					<ul class="siblings">
+					<ul>
 						<li>Francesca (Dark Purple)</li>
 						<li>Bartholomew (Light Green)</li>
 						<li>Marcello (Blue)</li>
@@ -95,10 +107,12 @@ Github URL: https://github.com/rawansaab/ex1
 					</ul>
 				</div>
 			</div>
-			<div class="img-column">
-				<img class="side-img" src="profile1.png" alt="Mickey side" />
 			</div>
-		</div>
+			<div class="img-column">
+				<img src="profile1.png" alt="Mickey and friend" />
+			</div>
+		</section>
+
 		<div>
 			<div>
                 <div class="section endorsements">
