--- a/profile.html
+++ b/profile.html
@@ -3,15 +3,15 @@ Names: Rawan Saab: 213693625, Lareen Kadour:213992431 , George Hanna: 324090968
 Github URL: https://github.com/rawansaab/ex1
 -->
 <!DOCTYPE html>
-<html lang = "en">
+<html lang="en">
 
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Mickey the Debug Dog</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Rammetto+One&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Bree+Serif&family=Rammetto+One&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="profile.css" />
 </head>
 
@@ -20,26 +20,27 @@ Github URL: https://github.com/rawansaab/ex1
 		<!-- Banner start -->
 		<div id="banner-container">
 			<div class="profile-img-wrapper">
-				<img class="profile-img" src="profile.png" alt="Mickey profile"/>
+				<img class="profile-img" src="profile.png" alt="Mickey profile" />
 			</div>
 		</div>
-	</div>
-		<!-- Banner end -->
-		<h1 class="main-title"> Mickey the Debug Dog </h1>
+	<!-- Banner end -->
+	<h1 class="main-title"> Mickey the Debug Dog </h1>
 
-		<section class="content-block info-section">
+	<section class="content-block info-section">
 		<div class="text-column">
-				<p>
-					Many a programmer have heard of
-					<a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubber Duck Debugging</a>.
-					But they do not know the invincible power of a Debug Dog.
-				</p>
-				<p>
-						<a href= "https://en.wikipedia.org/wiki/Dog">Dogs</a> are known in many cultures as men and women's best friends. Most cultures rate these mythical creatures as above average intelligence, making them especially
-						good at helping to debug those tough problems in your code.
-				</p>
-				<div class="info-row">
-					<div class="info-label">
+			<p>
+				Many a programmer have heard of
+				<a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubber Duck Debugging</a>.
+				But they do not know the invincible power of a Debug Dog.
+			</p>
+			<p>
+				<a href="https://en.wikipedia.org/wiki/Dog">Dogs</a> are known in many cultures as men and women's best
+				friends. Most cultures rate these mythical creatures as above average intelligence, making them
+				especially
+				good at helping to debug those tough problems in your code.
+			</p>
+			<div class="info-row">
+				<div class="info-label">
 					<p>
 						Real Name
 					</p>
@@ -49,9 +50,9 @@ Github URL: https://github.com/rawansaab/ex1
 						GOSIG GOLDEN by <a href="https://www.ikea.com/">Ikea</a>
 					</p>
 				</div>
-				</div>
-				<div class="info-row">
-					<div class="info-label">
+			</div>
+			<div class="info-row">
+				<div class="info-label">
 					<p>
 						Birthdate/"Gotcha Day"
 					</p>
@@ -61,9 +62,9 @@ Github URL: https://github.com/rawansaab/ex1
 						Born &copy; 2001 in China, but found at a rummage sale in Seattle, WA in March of 2012.
 					</p>
 				</div>
-				</div>
-				<div class="info-row">
-					<div class="info-label">
+			</div>
+			<div class="info-row">
+				<div class="info-label">
 					<p>
 						Powers
 					</p>
@@ -71,13 +72,15 @@ Github URL: https://github.com/rawansaab/ex1
 				<div class="info-value">
 					<p>
 						As Douglas Adams once said “One is never alone with a rubber duck.” Mickey, the Debug Dog is a
-						patient listener, able to help you solve your debugging woes. Unlike a rubber duck, Mickey is also soft and cuMickeyly, doubling
-						as a pillow for those occasional times you need to just close your eyes for a 5 minute power nap.
+						patient listener, able to help you solve your debugging woes. Unlike a rubber duck, Mickey is
+						also soft and cuMickeyly, doubling
+						as a pillow for those occasional times you need to just close your eyes for a 5 minute power
+						nap.
 					</p>
 				</div>
-		        </div>
-				<div class="info-row">
-					<div class="info-label">
+			</div>
+			<div class="info-row">
+				<div class="info-label">
 					<p>
 						Stats
 					</p>
@@ -91,8 +94,8 @@ Github URL: https://github.com/rawansaab/ex1
 					</p>
 				</div>
 			</div>
-				<div class="info-row">
-					<div class="info-label">
+			<div class="info-row">
+				<div class="info-label">
 					<p>
 						Siblings
 					</p>
@@ -107,66 +110,69 @@ Github URL: https://github.com/rawansaab/ex1
 					</ul>
 				</div>
 			</div>
-			</div>
-			<div class="img-column">
-				<img src="profile1.png" alt="Mickey and friend" />
-			</div>
-		</section>
-
-		<div>
-			<div>
-                <div class="section endorsements">
-                    <div class="endorse-layout">
-                    <div class="col">
-				    <h2 class="section-title"> Endorsement</h2>
-				<div class="endorsement-card">
-					<p>
-						I remember the first time I met Mickey the Debug Dog.
-						Mickey looked so fierce as they stared at the code with me. I slowly explained
-						everything and they listened to my every word.
-						The pauses were uncomfortable, but then I SAW it. I saw the error. Mickey
-						saved me hours of anguish.
-					</p>
-					<hr />
-					<span class="endorser">Sofia H, AP CS student.</span>
-				</div>
-				<div class="endorsement-card">
-					<p>
-						Mickey KNOWS THE WAE Mickey 
-					</p>
-					<hr />
-					<span class="endorser">Manesh J, Software Engineer, Imaginarium.</span>
-				</div>
-				<div class="endorsement-card">
-					<p>
-						Mickey has been an amazing help to me, someone who listens to every problem and is never judgemental.
-					</p>
-					<hr />
-					<span class="endorser">Chris L, Programming Club Participant.</span>
-				</div>
-				<div class="endorsement-card">
-					<p>
-						I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution reveals itself alomst instantly. Years on this desk have shown me one truth. This is not ordinary debugging. 
-					</p>
-					<hr />
-					<span class="endorser">Rawan, Lareen and George</span>
-				</div>
-				<div class="endorsement-card">
-					<p>
-						AMickey your friend's endorsement here!
-					</p>
-					<hr />
-					<span class="endorser">With your friend's name here</span>
-				</div>
-			</div>
-			<div class="col img-col">
-				<img class="side-img" src="profile2.png" alt="Mickey another"/>
-			</div>
 		</div>
-        </div>
-		<div class="section">
-			<h2 class="section-title"> Meet the whole debugging squad </h2>
-			<div class="friends-row">
+		<div class="imgage-column">
+			<img src="profile1.png" alt="Mickey and friend" />
+		</div>
+	</section>
+
+	<div>
+		<div>
+			<div class="section endorsements">
+				<div class="endorse-layout">
+					<div class="col">
+						<h2 class="section-title"> Endorsement</h2>
+						<div class="endorsement-card">
+							<p>
+								I remember the first time I met Mickey the Debug Dog.
+								Mickey looked so fierce as they stared at the code with me. I slowly explained
+								everything and they listened to my every word.
+								The pauses were uncomfortable, but then I SAW it. I saw the error. Mickey
+								saved me hours of anguish.
+							</p>
+							<hr />
+							<span class="endorser">Sofia H, AP CS student.</span>
+						</div>
+						<div class="endorsement-card">
+							<p>
+								Mickey KNOWS THE WAE Mickey
+							</p>
+							<hr />
+							<span class="endorser">Manesh J, Software Engineer, Imaginarium.</span>
+						</div>
+						<div class="endorsement-card">
+							<p>
+								Mickey has been an amazing help to me, someone who listens to every problem and is never
+								judgemental.
+							</p>
+							<hr />
+							<span class="endorser">Chris L, Programming Club Participant.</span>
+						</div>
+						<div class="endorsement-card">
+							<p>
+								I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution
+								reveals itself alomst instantly. Years on this desk have shown me one truth. This is not
+								ordinary debugging.
+							</p>
+							<hr />
+							<span class="endorser">Rawan, Lareen and George</span>
+						</div>
+						<div class="endorsement-card">
+							<p>
+								AMickey your friend's endorsement here!
+							</p>
+							<hr />
+							<span class="endorser">With your friend's name here</span>
+						</div>
+					</div>
+					<div class="col img-col">
+						<img class="side-img" src="profile2.png" alt="Mickey another" />
+					</div>
+				</div>
+			</div>
+			<div class="section">
+				<h2 class="section-title"> Meet the whole debugging squad </h2>
+				<div class="friends-row">
 					<img class="friend-img" src="friend1.png" />
 					<img class="friend-img" src="friend2.png" />
 					<img class="friend-img" src="friend3.png" />
@@ -175,12 +181,12 @@ Github URL: https://github.com/rawansaab/ex1
 					<img class="friend-img" src="friend6.png" />
 					<img class="friend-img" src="friend7.png" />
 					<img class="friend-img" src="friend8.png" />
+				</div>
+			</div>
+			<div class="footer">
+				Zefat Academic College
 			</div>
 		</div>
-		<div class="footer">
-            Zefat Academic College
-		</div>
-	</div>
 </body>
 
 </html>
