--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@ Github URL: https://github.com/rawansaab/ex1
 		<!-- Banner end -->
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
 
-		<section class="content-block info-section">
+		<div class="content-block info-section">
 			<div class="text-column">
 				<p>
 					Many a programmer have heard of
@@ -118,77 +118,76 @@ Github URL: https://github.com/rawansaab/ex1
 			<div class="image-column">
 				<img src="profile1.png" alt="Mickey and friend" />
 			</div>
-		</section>
+		</div>
 
-		<section class="content-block endorsements-section">
-				<div class="text-column">
-					<h2> ENDORSEMENT </h2>
-					<div class="endorsement-card">
-						<p>
-							I remember the first time I met Mickey the Debug Dog.
-							Mickey looked so fierce as they stared at the code with me. I slowly explained
-							everything and they listened to my every word.
-							The pauses were uncomfortable, but then I SAW it. I saw the error. Mickey
-							saved me hours of anguish.
-						</p>
-						<hr />
-						<span>Sofia H, AP CS student.</span>
-					</div>
-					<div class="endorsement-card">
-						<p>
-							Mickey KNOWS THE WAE Mickey
-						</p>
-						<hr />
-						<span>Manesh J, Software Engineer, Imaginarium.</span>
-					</div>
-					<div class="endorsement-card">
-						<p>
-							Mickey has been an amazing help to me, someone who listens to every problem and is never
-							judgemental.
-						</p>
-						<hr />
-						<span>Chris L, Programming Club Participant.</span>
-					</div>
-					<div class="endorsement-card">
-						<p>
-							I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution
-							reveals itself alomst instantly. Years on this desk have shown me one truth. This is not
-							ordinary debugging.
-						</p>
-						<hr />
-						<span>Rawan, Lareen and George</span>
-					</div>
-					<div class="endorsement-card">
-						<p>
-							I tried explaining my code to a cat, but it just walked away. Mickey stays, listens, and helps me find that missing semicolon.
-						</p>
-						<hr />
-						<span>Prenka R, Java Student.</span>
-					</div>
+		<div class="content-block endorsements-section">
+			<div class="text-column">
+				<h2>ENDORSEMENTS</h2>
+				<div class="endorsement-card">
+					<p>
+						I remember the first time I met Mickey the Debug Dog.
+						Mickey looked so fierce as they stared at the code with me. I slowly explained
+						everything and they listened to my every word.
+						The pauses were uncomfortable, but then I SAW it. I saw the error. Mickey
+						saved me hours of anguish.
+					</p>
+					<hr />
+					<span>Sofia H, AP CS student.</span>
 				</div>
-				<div class="image-column">
-					<img src="profile2.png" alt="Mickey lying down" />
+				<div class="endorsement-card">
+					<p>
+						Mickey KNOWS THE WAE Mickey
+					</p>
+					<hr />
+					<span>Manesh J, Software Engineer, Imaginarium.</span>
+				</div>
+				<div class="endorsement-card">
+					<p>
+						Mickey has been an amazing help to me, someone who listens to every problem and is never
+						judgemental.
+					</p>
+					<hr />
+					<span>Chris L, Programming Club Participant.</span>
+				</div>
+				<div class="endorsement-card">
+					<p>
+						I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution
+						reveals itself alomst instantly. Years on this desk have shown me one truth. This is not
+						ordinary debugging.
+					</p>
+					<hr />
+					<span>Rawan, Lareen and George</span>
+				</div>
+				<div class="endorsement-card">
+					<p>
+						I tried explaining my code to a cat, but it just walked away. Mickey stays, listens, and helps
+						me find that missing semicolon.
+					</p>
+					<hr />
+					<span>Prenka R, Java Student.</span>
 				</div>
 			</div>
+			<div class="image-column">
+				<img src="profile2.png" alt="Mickey lying down" />
 			</div>
-			</section>
-			<div class="section">
-				<h2 class="section-title"> Meet the whole debugging squad </h2>
-				<div class="friends-row">
-					<img class="friend-img" src="friend1.png" />
-					<img class="friend-img" src="friend2.png" />
-					<img class="friend-img" src="friend3.png" />
-					<img class="friend-img" src="friend4.png" />
-					<img class="friend-img" src="friend5.png" />
-					<img class="friend-img" src="friend6.png" />
-					<img class="friend-img" src="friend7.png" />
-					<img class="friend-img" src="friend8.png" />
-				</div>
+		</div>
+		<div class="friends-section">
+			<h2>MEET THE WHOLE DEBUGGING SQUAD</h2>
+			<div class="friends-grid">
+				<img src="friend1.png" alt="friend 1" />
+                <img src="friend2.png" alt="friend 2" />
+                <img src="friend3.png" alt="friend 3" /> 
+				<img src="friend4.png" alt="friend 4" />
+                <img src="friend5.png" alt="friend 5" />
+                <img src="friend6.png" alt="friend 6" />
+                <img src="friend7.png" alt="friend 7" />
+                <img src="friend8.png" alt="friend 8" />
 			</div>
-			<div class="footer">
-				Zefat Academic College
-			</div>
-			</div>
+		</div>
+		<div class="footer">
+			Zefat Academic College
+		</div>
+		</div>
 </body>
 
 </html>
