--- a/profile.html
+++ b/profile.html
@@ -122,7 +122,7 @@ Github URL: https://github.com/rawansaab/ex1
 
 		<div class="content-block endorsements-section">
 			<div class="text-column">
-				<h2>ENDORSEMENTS</h2>
+				<h2>Endorsements</h2>
 				<div class="endorsement-card">
 					<p>
 						I remember the first time I met Mickey the Debug Dog.
@@ -172,7 +172,7 @@ Github URL: https://github.com/rawansaab/ex1
 			</div>
 		</div>
 		<div class="friends-section">
-			<h2>MEET THE WHOLE DEBUGGING SQUAD</h2>
+			<h2>Meet the debugging squad</h2>
 			<div class="friends-grid">
 				<img src="friend1.png" alt="friend 1" />
                 <img src="friend2.png" alt="friend 2" />
