--- a/profile.html
+++ b/profile.html
@@ -16,14 +16,14 @@ Github URL: https://github.com/rawansaab/ex1
 </head>
 
 <body>
-	<main class="main-container">
+	<div class="main-container">
 		<!-- Banner start -->
-		<div id="banner-container">
+		<div id="banner">
 			<div class="profile-img-wrapper">
 				<img class="profile-img" src="profile.png" alt="Mickey profile" />
 			</div>
 		</div>
-		</div>
+	
 		<!-- Banner end -->
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
 
