Refactor: Replace divs with semantic HTML5 tags

--- a/profile.html
+++ b/profile.html
@@ -18,16 +18,19 @@ Github URL: https://github.com/rawansaab/ex1
 <body>
 	<div class="main-container">
 		<!-- Banner start -->
-		<div id="banner">
+		<header id="banner">
 			<div class="profile-img-wrapper">
 				<img class="profile-img" src="profile.png" alt="Mickey profile" />
 			</div>
 		</div>
+		</header>
 		
 		<!-- Banner end -->
+		 
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
+		<main>
 
-		<div class="content-block info-section">
+		<section class="content-block info-section">
 			<div class="text-column">
 				<p>
 					Many a programmer have heard of
@@ -118,7 +121,7 @@ Github URL: https://github.com/rawansaab/ex1
 			<div class="image-column">
 				<img src="profile1.png" alt="Mickey and friend" />
 			</div>
-		</div>
+		</section>
 
 		<div class="content-block endorsements-section">
 			<div class="text-column">
