--- a/profile.html
+++ b/profile.html
@@ -123,7 +123,7 @@ Github URL: https://github.com/rawansaab/ex1
 			</div>
 		</section>
 
-		<div class="content-block endorsements-section">
+		<section class="content-block endorsements-section">
 			<div class="text-column">
 				<h2>Endorsements</h2>
 				<div class="endorsement-card">
@@ -174,6 +174,8 @@ Github URL: https://github.com/rawansaab/ex1
 				<img src="profile2.png" alt="Mickey lying down" />
 			</div>
 		</div>
+		</section>
+		
 		<div class="friends-section">
 			<h2>Meet the debugging squad</h2>
 			<div class="friends-grid">
