Updating the sections tags

--- a/profile.html
+++ b/profile.html
@@ -175,8 +175,8 @@ Github URL: https://github.com/rawansaab/ex1
 			</div>
 		</div>
 		</section>
-		
-		<div class="friends-section">
+
+		<section class="friends-section">
 			<h2>Meet the debugging squad</h2>
 			<div class="friends-grid">
 				<img src="friend1.png" alt="friend 1" />
@@ -188,11 +188,12 @@ Github URL: https://github.com/rawansaab/ex1
                 <img src="friend7.png" alt="friend 7" />
                 <img src="friend8.png" alt="friend 8" />
 			</div>
-		</div>
-		<div class="footer">
+		</section>
+		</main>
+
+		<footer class="footer">
 			Zefat Academic College
-		</div>
+		</footer>
 		</div>
 </body>
-
 </html>
