--- a/profile.html
+++ b/profile.html
@@ -22,178 +22,181 @@ Github URL: https://github.com/rawansaab/ex1
 			<div class="profile-img-wrapper">
 				<img class="profile-img" src="profile.png" alt="Mickey profile" />
 			</div>
-		</div>
 		</header>
-		
 		<!-- Banner end -->
-		 
+
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
 		<main>
 
-		<section class="content-block info-section">
-			<div class="text-column">
-				<p>
-					Many a programmer have heard of
-					<a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubber Duck Debugging</a>.
-					But they do not know the invincible power of a Debug Dog.
-				</p>
-				<p>
-					<a href="https://en.wikipedia.org/wiki/Dog">Dogs</a> are known in many cultures as men and women's
-					best
-					friends. Most cultures rate these mythical creatures as above average intelligence, making them
-					especially
-					good at helping to debug those tough problems in your code.
-				</p>
-				<div class="info-row">
-					<div class="info-label">
-						<p>
-							Real Name
-						</p>
+			<section class="content-block info-section">
+				<div class="text-column">
+					<p>
+						Many a programmer have heard of
+						<a href="https://en.wikipedia.org/wiki/Rubber_duck_debugging">Rubber Duck Debugging</a>.
+						But they do not know the invincible power of a Debug Dog.
+					</p>
+					<p>
+						<a href="https://en.wikipedia.org/wiki/Dog">Dogs</a> are known in many cultures as men and
+						women's
+						best
+						friends. Most cultures rate these mythical creatures as above average intelligence, making them
+						especially
+						good at helping to debug those tough problems in your code.
+					</p>
+					<div class="info-row">
+						<div class="info-label">
+							<p>
+								Real Name
+							</p>
+						</div>
+						<div class="info-value">
+							<p>
+								GOSIG GOLDEN by <a href="https://www.ikea.com/">Ikea</a>
+							</p>
+						</div>
 					</div>
-					<div class="info-value">
-						<p>
-							GOSIG GOLDEN by <a href="https://www.ikea.com/">Ikea</a>
-						</p>
+					<div class="info-row">
+						<div class="info-label">
+							<p>
+								Birthdate/"Gotcha Day"
+							</p>
+						</div>
+						<div class="info-value">
+							<p>
+								Born &copy; 2001 in China, but found at a rummage sale in Seattle, WA in March of 2012.
+							</p>
+						</div>
+					</div>
+					<div class="info-row">
+						<div class="info-label">
+							<p>
+								Powers
+							</p>
+						</div>
+						<div class="info-value">
+							<p>
+								As Douglas Adams once said “One is never alone with a rubber duck.” Mickey, the Debug
+								Dog is
+								a
+								patient listener, able to help you solve your debugging woes. Unlike a rubber duck,
+								Mickey
+								is
+								also soft and cuMickeyly, doubling
+								as a pillow for those occasional times you need to just close your eyes for a 5 minute
+								power
+								nap.
+							</p>
+						</div>
+					</div>
+					<div class="info-row">
+						<div class="info-label">
+							<p>
+								Stats
+							</p>
+						</div>
+						<div class="info-value">
+							<p>
+								<strong>Real name:</strong>GOSIG GOLDEN<br>
+								<strong>Prefered pronouns:</strong>They/Them<br>
+								<strong>Size:</strong>12" x 16" X 12"<br>
+								<strong>Weight:</strong>2 lbs<br>
+							</p>
+						</div>
+					</div>
+					<div class="info-row">
+						<div class="info-label">
+							<p>
+								Siblings
+							</p>
+						</div>
+						<div class="info-value">
+							<ul>
+								<li>Francesca (Dark Purple)</li>
+								<li>Bartholomew (Light Green)</li>
+								<li>Marcello (Blue)</li>
+								<li>Cordelia (Dark Green)</li>
+								<li>Guinevier (Gold)</li>
+							</ul>
+						</div>
 					</div>
 				</div>
-				<div class="info-row">
-					<div class="info-label">
-						<p>
-							Birthdate/"Gotcha Day"
-						</p>
-					</div>
-					<div class="info-value">
-						<p>
-							Born &copy; 2001 in China, but found at a rummage sale in Seattle, WA in March of 2012.
-						</p>
-					</div>
+				<div class="image-column">
+					<img src="profile1.png" alt="Mickey and friend" />
 				</div>
-				<div class="info-row">
-					<div class="info-label">
-						<p>
-							Powers
-						</p>
-					</div>
-					<div class="info-value">
-						<p>
-							As Douglas Adams once said “One is never alone with a rubber duck.” Mickey, the Debug Dog is
-							a
-							patient listener, able to help you solve your debugging woes. Unlike a rubber duck, Mickey
-							is
-							also soft and cuMickeyly, doubling
-							as a pillow for those occasional times you need to just close your eyes for a 5 minute power
-							nap.
-						</p>
-					</div>
-				</div>
-				<div class="info-row">
-					<div class="info-label">
-						<p>
-							Stats
-						</p>
-					</div>
-					<div class="info-value">
-						<p>
-							<strong>Real name:</strong>GOSIG GOLDEN<br>
-							<strong>Prefered pronouns:</strong>They/Them<br>
-							<strong>Size:</strong>12" x 16" X 12"<br>
-							<strong>Weight:</strong>2 lbs<br>
-						</p>
-					</div>
-				</div>
-				<div class="info-row">
-					<div class="info-label">
-						<p>
-							Siblings
-						</p>
-					</div>
-					<div class="info-value">
-						<ul>
-							<li>Francesca (Dark Purple)</li>
-							<li>Bartholomew (Light Green)</li>
-							<li>Marcello (Blue)</li>
-							<li>Cordelia (Dark Green)</li>
-							<li>Guinevier (Gold)</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-			<div class="image-column">
-				<img src="profile1.png" alt="Mickey and friend" />
-			</div>
-		</section>
+			</section>
 
-		<section class="content-block endorsements-section">
-			<div class="text-column">
-				<h2>Endorsements</h2>
-				<div class="endorsement-card">
-					<p>
-						I remember the first time I met Mickey the Debug Dog.
-						Mickey looked so fierce as they stared at the code with me. I slowly explained
-						everything and they listened to my every word.
-						The pauses were uncomfortable, but then I SAW it. I saw the error. Mickey
-						saved me hours of anguish.
-					</p>
-					<hr />
-					<span>Sofia H, AP CS student.</span>
+			<section class="content-block endorsements-section">
+				<div class="text-column">
+					<h2>Endorsements</h2>
+					<div class="endorsement-card">
+						<p>
+							I remember the first time I met Mickey the Debug Dog.
+							Mickey looked so fierce as they stared at the code with me. I slowly explained
+							everything and they listened to my every word.
+							The pauses were uncomfortable, but then I SAW it. I saw the error. Mickey
+							saved me hours of anguish.
+						</p>
+						<hr />
+						<span>Sofia H, AP CS student.</span>
+					</div>
+					<div class="endorsement-card">
+						<p>
+							Mickey KNOWS THE WAE Mickey
+						</p>
+						<hr />
+						<span>Manesh J, Software Engineer, Imaginarium.</span>
+					</div>
+					<div class="endorsement-card">
+						<p>
+							Mickey has been an amazing help to me, someone who listens to every problem and is never
+							judgemental.
+						</p>
+						<hr />
+						<span>Chris L, Programming Club Participant.</span>
+					</div>
+					<div class="endorsement-card">
+						<p>
+							I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution
+							reveals itself alomst instantly. Years on this desk have shown me one truth. This is not
+							ordinary debugging.
+						</p>
+						<hr />
+						<span>Rawan, Lareen and George</span>
+					</div>
+					<div class="endorsement-card">
+						<p>
+							I tried explaining my code to a cat, but it just walked away. Mickey stays, listens, and
+							helps
+							me find that missing semicolon.
+						</p>
+						<hr />
+						<span>Prenka R, Java Student.</span>
+					</div>
 				</div>
-				<div class="endorsement-card">
-					<p>
-						Mickey KNOWS THE WAE Mickey
-					</p>
-					<hr />
-					<span>Manesh J, Software Engineer, Imaginarium.</span>
+				<div class="image-column">
+					<img src="profile2.png" alt="Mickey lying down" />
 				</div>
-				<div class="endorsement-card">
-					<p>
-						Mickey has been an amazing help to me, someone who listens to every problem and is never
-						judgemental.
-					</p>
-					<hr />
-					<span>Chris L, Programming Club Participant.</span>
-				</div>
-				<div class="endorsement-card">
-					<p>
-						I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution
-						reveals itself alomst instantly. Years on this desk have shown me one truth. This is not
-						ordinary debugging.
-					</p>
-					<hr />
-					<span>Rawan, Lareen and George</span>
-				</div>
-				<div class="endorsement-card">
-					<p>
-						I tried explaining my code to a cat, but it just walked away. Mickey stays, listens, and helps
-						me find that missing semicolon.
-					</p>
-					<hr />
-					<span>Prenka R, Java Student.</span>
-				</div>
-			</div>
-			<div class="image-column">
-				<img src="profile2.png" alt="Mickey lying down" />
-			</div>
-		</div>
-		</section>
+			</section>
 
-		<section class="friends-section">
-			<h2>Meet the debugging squad</h2>
-			<div class="friends-grid">
-				<img src="friend1.png" alt="friend 1" />
-                <img src="friend2.png" alt="friend 2" />
-                <img src="friend3.png" alt="friend 3" /> 
-				<img src="friend4.png" alt="friend 4" />
-                <img src="friend5.png" alt="friend 5" />
-                <img src="friend6.png" alt="friend 6" />
-                <img src="friend7.png" alt="friend 7" />
-                <img src="friend8.png" alt="friend 8" />
-			</div>
-		</section>
+			<section class="friends-section">
+				<h2>Meet the debugging squad</h2>
+				<div class="friends-grid">
+					<img src="friend1.png" alt="friend 1" />
+					<img src="friend2.png" alt="friend 2" />
+					<img src="friend3.png" alt="friend 3" />
+					<img src="friend4.png" alt="friend 4" />
+					<img src="friend5.png" alt="friend 5" />
+					<img src="friend6.png" alt="friend 6" />
+					<img src="friend7.png" alt="friend 7" />
+					<img src="friend8.png" alt="friend 8" />
+				</div>
+			</section>
 		</main>
 
 		<footer class="footer">
 			Zefat Academic College
 		</footer>
-		</div>
+	</div>
 </body>
+
 </html>
