Fix HTML structure: remove extra closing div in info section

--- a/profile.html
+++ b/profile.html
@@ -19,15 +19,15 @@ Github URL: https://github.com/rawansaab/ex1
 	<div class="main-container">
 		<!-- Banner start -->
 		<header id="banner">
+			<div class="banner-inner">
 			<div class="profile-img-wrapper">
 				<img class="profile-img" src="profile.png" alt="Mickey profile" />
 			</div>
+			</div>
 		</header>
 		<!-- Banner end -->
-
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
 		<main>
-
 			<section class="content-block info-section">
 				<div class="text-column">
 					<p>
@@ -193,7 +193,7 @@ Github URL: https://github.com/rawansaab/ex1
 			</section>
 		</main>
 
-		<footer class="footer">
+		<footer>
 			Zefat Academic College
 		</footer>
 	</div>
