--- a/profile.html
+++ b/profile.html
@@ -179,7 +179,7 @@ Github URL: https://github.com/rawansaab/ex1
 			</section>
 
 			<section class="friends-section">
-				<h2>Meet the debugging squad</h2>
+				<h2>Meet the whole debugging squad</h2>
 				<div class="friends-grid">
 					<img src="friend1.png" alt="friend 1" />
 					<img src="friend2.png" alt="friend 2" />
