Fill in the last two endorsement texts with original content

--- a/profile.html
+++ b/profile.html
@@ -156,12 +156,12 @@ Github URL: https://github.com/rawansaab/ex1
 					</div>
 					<div class="endorsement-card">
 						<p>
-							I remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution
-							reveals itself alomst instantly. Years on this desk have shown me one truth. This is not
+							We remain silent and unmoving. Yet whenever a bug is explained to Mickey, the solution
+							reveals itself alomst instantly. Years on this desk have shown us one truth. This is not
 							ordinary debugging.
 						</p>
 						<hr />
-						<span>Rawan, Lareen and George</span>
+						<span>Lareen K and George H, Information Systems Management Students.</span>
 					</div>
 					<div class="endorsement-card">
 						<p>
@@ -170,7 +170,7 @@ Github URL: https://github.com/rawansaab/ex1
 							me find that missing semicolon.
 						</p>
 						<hr />
-						<span>Prenka R, Java Student.</span>
+						<span>Rawan S, Information Systems Management Student.</span>
 					</div>
 				</div>
 				<div class="image-column">
