Finalize HTML structure according to assignment guidelines

--- a/profile.html
+++ b/profile.html
@@ -27,8 +27,7 @@ Github URL: https://github.com/rawansaab/ex1
 		</header>
 		<!-- Banner end -->
 		<h1 class="main-title"> Mickey the Debug Dog </h1>
-		<main>
-			<section class="content-block info-section">
+			<div class="content-block info-section">
 				<div class="text-column">
 					<p>
 						Many a programmer have heard of
@@ -36,12 +35,8 @@ Github URL: https://github.com/rawansaab/ex1
 						But they do not know the invincible power of a Debug Dog.
 					</p>
 					<p>
-						<a href="https://en.wikipedia.org/wiki/Dog">Dogs</a> are known in many cultures as men and
-						women's
-						best
-						friends. Most cultures rate these mythical creatures as above average intelligence, making them
-						especially
-						good at helping to debug those tough problems in your code.
+							<a href= "https://en.wikipedia.org/wiki/Dog">Dogs</a> are known in many cultures as men and women's best friends. Most cultures rate these mythical creatures as above average intelligence, making them especially
+							good at helping to debug those tough problems in your code.
 					</p>
 					<div class="info-row">
 						<div class="info-label">
@@ -75,16 +70,9 @@ Github URL: https://github.com/rawansaab/ex1
 						</div>
 						<div class="info-value">
 							<p>
-								As Douglas Adams once said “One is never alone with a rubber duck.” Mickey, the Debug
-								Dog is
-								a
-								patient listener, able to help you solve your debugging woes. Unlike a rubber duck,
-								Mickey
-								is
-								also soft and cuMickeyly, doubling
-								as a pillow for those occasional times you need to just close your eyes for a 5 minute
-								power
-								nap.
+								As Douglas Adams once said “One is never alone with a rubber duck.” Mickey, the Debug Dog is a
+								patient listener, able to help you solve your debugging woes. Unlike a rubber duck, Mickey is also soft and cuMickeyly, doubling
+								as a pillow for those occasional times you need to just close your eyes for a 5 minute power nap.
 							</p>
 						</div>
 					</div>
@@ -123,11 +111,11 @@ Github URL: https://github.com/rawansaab/ex1
 				<div class="image-column">
 					<img src="profile1.png" alt="Mickey and friend" />
 				</div>
-			</section>
+			</div>
 
-			<section class="content-block endorsements-section">
+			<div class="content-block endorsements-section">
 				<div class="text-column">
-					<h2>Endorsements</h2>
+					<h2> Endorsement</h2>
 					<div class="endorsement-card">
 						<p>
 							I remember the first time I met Mickey the Debug Dog.
@@ -176,10 +164,10 @@ Github URL: https://github.com/rawansaab/ex1
 				<div class="image-column">
 					<img src="profile2.png" alt="Mickey lying down" />
 				</div>
-			</section>
+			</div>
 
-			<section class="friends-section">
-				<h2>Meet the whole debugging squad</h2>
+			<div class="friends-section">
+				<h2> Meet the whole debugging squad</h2>
 				<div class="friends-grid">
 					<img src="friend1.png" alt="friend 1" />
 					<img src="friend2.png" alt="friend 2" />
@@ -190,8 +178,7 @@ Github URL: https://github.com/rawansaab/ex1
 					<img src="friend7.png" alt="friend 7" />
 					<img src="friend8.png" alt="friend 8" />
 				</div>
-			</section>
-		</main>
+			</div>
 
 		<footer>
 			Zefat Academic College
