Finalize HTML structure

--- a/profile.html
+++ b/profile.html
@@ -136,8 +136,7 @@ Github URL: https://github.com/rawansaab/ex1
 					</div>
 					<div class="endorsement-card">
 						<p>
-							Mickey has been an amazing help to me, someone who listens to every problem and is never
-							judgemental.
+							Mickey has been an amazing help to me, someone who listens to every problem and is never judgemental.
 						</p>
 						<hr />
 						<span>Chris L, Programming Club Participant.</span>
